--- a/MvcMovie/Views/Movies/Index.cshtml
+++ b/MvcMovie/Views/Movies/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>My Movies</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
@@ -17,6 +17,13 @@
         </select>
 
         <label>Title: <input type="text" asp-for="SearchString" /></label>
+        <input type="submit" value="Filter" />
+    </p>
+</form>
+
+<form asp-controller="Movies" asp-action="Index" method="get">
+    <p>
+        <label>Year: <input type="number" name="SearchYear" min="1900" max="2099" /></label>
         <input type="submit" value="Filter" />
     </p>
 </form>
